--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,12 +5,12 @@ homepage: https://github.com/balvinderz/video_player_web_hls
 # the version to 2.0.0.
 # See more details: https://github.com/flutter/flutter/wiki/Package-migration-to-1.0.0
 version: 0.1.11+2
-
+publish_to: none
 flutter:
   plugin:
     platforms:
       web:
-        pluginClass: VideoPlayerPluginHls 
+        pluginClass: VideoPlayerPluginHls
         fileName: video_player_web_hls.dart
 
 dependencies:
@@ -21,6 +21,10 @@ dependencies:
   meta: ^1.3.0
   video_player_platform_interface: ^4.1.0
   js: ^0.6.3
+  sigv4:
+    git:
+      url: https://github.com/bartuszak/sigv4.git
+      ref: null-safety
 dev_dependencies:
   flutter_test:
     sdk: flutter
