--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,11 @@ dependencies:
   meta: ^1.3.0
   video_player_platform_interface: ^4.1.0
   js: ^0.6.3
-  sigv4:
-    git:
-      url: https://github.com/bartuszak/sigv4.git
-      ref: null-safety
+  sigv4: ^5.0.1-nullsafety.1
+  # sigv4:
+  #   git:
+  #     url: https://github.com/bartuszak/sigv4.git
+  #     ref: null-safety
 dev_dependencies:
   flutter_test:
     sdk: flutter
